feat: Update the extraction logic for backend and fronend
